--- a/07-WebContentFormatting/landmarks.html
+++ b/07-WebContentFormatting/landmarks.html
@@ -23,6 +23,18 @@
             text-align: justify;
             font-family: 'Arial', sans-serif;
         }
+        h2 {
+            padding: 20px;
+            margin: 20px auto;
+            background-color: lightgray;
+            text-align: center;
+        }
+        ul {
+            padding: 20px;
+            margin: 20px auto;
+            background-color: lightgray;
+            text-align: center;
+        }
     </style>
 </head>
 
